--- a/src/panel/panel.html
+++ b/src/panel/panel.html
@@ -37,6 +37,56 @@
       <button id="next-update">Apply Latest</button>
       <button id="flip-board">Flip</button>
       <button id="clear-notes">Clear Notes</button>
+      <button id="open-settings">Settings</button>
+    </section>
+
+    <section id="settings-panel" class="hidden">
+      <div class="section-title">Settings</div>
+
+      <label class="setting-row" for="setting-scan-frequency">
+        <span>Scan Frequency: <strong id="setting-scan-frequency-value">1.5s</strong></span>
+        <input id="setting-scan-frequency" type="range" min="0.5" max="3" step="0.1" value="1.5">
+      </label>
+
+      <label class="setting-row" for="setting-engine-depth">
+        <span>Engine Depth: <strong id="setting-engine-depth-value">20</strong></span>
+        <input id="setting-engine-depth" type="range" min="10" max="24" step="1" value="20">
+      </label>
+
+      <label class="setting-row" for="setting-board-theme">
+        <span>Board Theme</span>
+        <select id="setting-board-theme">
+          <option value="green">Green</option>
+          <option value="brown">Brown</option>
+          <option value="blue">Blue</option>
+          <option value="gray">Gray</option>
+        </select>
+      </label>
+
+      <label class="setting-toggle" for="setting-auto-sync">
+        <input id="setting-auto-sync" type="checkbox" checked>
+        <span>Auto-sync</span>
+      </label>
+
+      <label class="setting-toggle" for="setting-show-eval-bar">
+        <input id="setting-show-eval-bar" type="checkbox" checked>
+        <span>Show eval bar</span>
+      </label>
+
+      <label class="setting-toggle" for="setting-show-best-move">
+        <input id="setting-show-best-move" type="checkbox" checked>
+        <span>Show best move arrow</span>
+      </label>
+
+      <label class="setting-toggle" for="setting-theme">
+        <input id="setting-theme" type="checkbox" checked>
+        <span>Dark theme</span>
+      </label>
+
+      <label class="setting-toggle" for="setting-show-performance">
+        <input id="setting-show-performance" type="checkbox">
+        <span>Show performance stats</span>
+      </label>
     </section>
   </main>
 
